formatting fixes - notice and alert causing layout issues, removed for now

--- a/app/assets/stylesheets/user-admin.css
+++ b/app/assets/stylesheets/user-admin.css
@@ -20,3 +20,7 @@ th {
 table {
     position: absolute;
 }
+
+.submitButton {
+    z-index: 1050;
+}
